--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -31,6 +31,7 @@ textarea {
 
 /* typography */
 
+/*
 h1, h2, h3, h4, h5, h6 {
   line-height: 1;
 }
@@ -54,28 +55,29 @@ h2 {
 p {
   font-size: 1.1em;
   line-height: 1.7em;
-}
+}*/
+
 
 
 /* header */
-
-#logo {
-  float: left;
-  margin-right: 10px;
-  font-size: 1.7em;
-  color: white;
-  text-transform: uppercase;
-  letter-spacing: -1px;
-  padding-top: 9px;
-  font-weight: bold;
-  &:hover {
+header {
+  #logo {
+    float: left;
+    margin-right: 10px;
+    font-size: 1.7em;
     color: white;
-    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: -1px;
+    padding-top: 9px;
+    font-weight: bold;
+    &:hover {
+      color: white;
+      text-decoration: none;
+    }
   }
 }
 
 /* footer */
-
 footer {
   margin-top: 45px;
   padding-top: 5px;
@@ -97,5 +99,23 @@ footer {
       float: left;
       margin-left: 15px;
     }
+  }
+}
+
+/* form validation */
+#error_explanation {
+  @extend .alert;
+  @extend .alert-danger;
+  
+  h2 {
+    margin-top: 0;
+  }
+}
+
+.field_with_errors {
+  @extend .control-group;
+  @extend .has-error;
+  + br {
+    display: none;
   }
 }
