--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,14 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
     <%= link_to "Brv Doodle", '#', id: "logo" %>
+    <% if !session[:user_id].nil? %>
     <nav>
       <ul class="nav navbar-nav pull-right">
         <li><%= link_to "Home",   '#' %></li>
-        <li><%= link_to "Log in", '#' %></li>
+        <li><%= link_to "Users",   users_path %></li>
+        <li><%= link_to "Log Out", logout_path, method: :delete %></li>
       </ul>
     </nav>
+    <% end %>
   </div>
 </header>
