--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
 
     <%= render 'layouts/header' %>
     <div class="container">
+      <% flash.each do |type, msg| %>
+        <div id="flash_<%= type %>" class="<%= flash_alert_class(type) %> alert-dismissible">
+          <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+          <%= msg %>
+        </div>
+      <% end %>
+      
       <%= yield %>
     </div>
     <%= render 'layouts/footer' %>
